--- a/popup.html
+++ b/popup.html
@@ -39,10 +39,9 @@
 		<li class="op1">&nbsp;Lock Now</li>
 		<li class="op2">&nbsp;Options</li>
 		<hr>
-		<li class="op3">&nbsp;Contact Us</li>
-		<li class="op4">&nbsp;About</li>
+		<li class="op3">&nbsp;Disable</li>
 		<hr>
-		<li class="op5">&nbsp;Manage Extension</li>
+		<li class="op4">&nbsp;Manage Extension</li>
 	</ul>
   </body>
 </html>
