Changed the UI of the popup

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 			<center>
 				<h1>WebLOCK</h1>
 					
-			<p>Chrome Lock has locked your chrome browser. Please enter password to unlock browser. Please don't try anything Smart.</p></center>
+			<p>WebLOCK has locked your chrome browser. Please enter password to unlock browser. Please don't try anything Smart.</p></center>
 			<div class="optional">
 				<p>You can use incognito window. <a href="" class="incog">Click here</a> to open a new incognito window.</p>
 			</div>
