--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 			height:150px;
 			margin:0;
 			padding:0;
-			background-color:#F8F8F8;
+			background-color:#E6E6FA;
 		}
 		ul{
 			list-style-type:none;
@@ -33,13 +33,14 @@
   </head>
   <body>
   <div id="top">
-	<center><img src="/Images/Logo4.jpg" alt="Chrome Lock Logo" width="200px" height="90px"/></center>
+  <br>
+  	<center>	<img src="/Images/lock.png" width="50px" height="50px" />
+	<h1 style="color: red">WebLOCK</h1></center>
   </div>
 	<ul> 
 		<li class="op1">&nbsp;Lock Now</li>
-		<li class="op2">&nbsp;Options</li>
 		<hr>
-		<li class="op3">&nbsp;Disable</li>
+		<li class="op2">&nbsp;Options</li>
 		<hr>
 		<li class="op4">&nbsp;Manage Extension</li>
 	</ul>
