Fixed Manage extensions

--- a/options.html
+++ b/options.html
@@ -34,7 +34,7 @@
 				<br />
 				<h1>Inactivity Timeout</h1>
 				<p><input class="tcb" type="checkbox" checked><strong> Automatically lock chrome after specified minutes of Inactivity.</strong></input><br />
-				when selected, Chrome Lock will automatically lock your browser after specified number of minutes of Inactivity.</p>
+				when selected, WebLOCK will automatically lock your browser after specified number of minutes of Inactivity.</p>
 				<div class="tm">
 					<div class="cl1">
 						<p>
