--- a/options.html
+++ b/options.html
@@ -30,6 +30,13 @@
 				<center><p><button class="bt1" id="buttonLayout">Save Changes</button></p></center>
 				
 				<hr/>
+				<h1>Incognito Window</h1>
+				<p>
+					<input type="checkbox" class="cb1" checked><strong> Allow people to use incognito window.</strong></input><br />
+					  <br />
+					<strong>Note : </strong>Works only when this extension is enabled in incognito mode. <strong><a href="" class="en" style="color: yellow">Enable now.</a></strong><br />
+				</p>
+				<br />
 				<hr/>	
 				<br />
 				<h1>Inactivity Timeout</h1>
@@ -52,9 +59,9 @@
 							<br />
 							<div class="siteList">
 								<p><input type="text" class="tip1" placeholder="  Eg : youtube.com or www.youtube.com">
-								<button class="add" id="buttonLayout1"><img src="/Images/plus.png" />&nbsp;Add&nbsp;</button>
-								<button class="remove" disabled="true" id="buttonLayout2"><img src="/Images/minus.png" height="14px" />&nbsp;Remove&nbsp;</button><br />
-								<select name="list" class="list" size="10">
+								<button class="add" id="buttonLayout1" >&nbsp;Add&nbsp;</button>
+								<button class="remove" disabled="true" id="buttonLayout2">&nbsp;Remove&nbsp;</button><br />
+								<select name="list" class="list" size="20">
 								</select>
 							</p></div>
 							<p>
@@ -68,8 +75,7 @@
 						when 'Current Tab only' option is selected, Automatic lock wil be disabled only if the Current or Active tab is playing audio and matches the Condition.
 						<br />
 						<br />
-						<strong>Note : </strong>This feature is still in beta-stage, May not work perfectly.<br />
-						There is no optimal way to detect if video is playing in a tab. So, Using Audio this feature is implemented.<br />
+						<strong>Note : </strong>
 						If audio is muted by any means, It is considered as a tab without Audio and this option will not work.
 						</p>
 					</p>
